Tweak masthead font sizes to prevent wrapping on very wide screens

--- a/site/css/agency.css
+++ b/site/css/agency.css
@@ -240,6 +240,26 @@ header.masthead .intro-text .intro-heading {
   }
 }
 
+@media (min-width: 1600px) {
+  header.masthead .intro-text {
+    padding-top: 300px;
+    padding-bottom: 200px;
+  }
+  header.masthead .intro-text .intro-lead-in {
+    font-size: 2.5vw;
+    font-style: italic;
+    line-height: 2.5vw;
+    margin-bottom: 25px;
+    font-family: 'Droid Serif', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+  header.masthead .intro-text .intro-heading {
+    font-size: 5.8vw;
+    font-weight: 700;
+    line-height: 5.8vw;
+    margin-bottom: 50px;
+    font-family: 'Montserrat', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  }
+}
 .service-heading {
   margin: 15px 0;
   text-transform: none;
